// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range Filter tests handle slider events correctly 1`] = `
<div class="sk-panel filter--m">
  <div class="sk-panel__header">metascore</div>
  <div class="sk-panel__content">
    <div>
      <div class="sk-range-histogram">
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 60%;"></div>
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 100%;"></div>
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 20%;"></div>
      </div>
      <div class="sk-range-slider">
        <div class="rc-slider rc-slider-with-marks">
          <div class="rc-slider-rail"></div>
          <div class="rc-slider-track rc-slider-track-1" style="visibility: visible; left: 40%; width: 20%;"></div>
          <div class="rc-slider-step"><span class="rc-slider-dot" style="left: 0%;"></span><span class="rc-slider-dot" style="left: 100%;"></span></div>
          <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="40" aria-disabled="false" class="rc-slider-handle rc-slider-handle-1"
            style="left: 40%;"></div>
          <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="60" aria-disabled="false" class="rc-slider-handle rc-slider-handle-2" style="left: 60%;"></div>
          <div class="rc-slider-mark"><span class="rc-slider-mark-text" style="width: 90%; margin-left: -45%; left: 0%;">0 score</span><span class="rc-slider-mark-text" style="width: 90%; margin-left: -45%; left: 100%;">100 score</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Range Filter tests handle slider events correctly 2`] = `
<div class="sk-panel filter--m">
  <div class="sk-panel__header">metascore</div>
  <div class="sk-panel__content">
    <div>
      <div class="sk-range-histogram">
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 60%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 100%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
      </div>
      <div class="sk-range-slider">
        <div class="rc-slider rc-slider-with-marks">
          <div class="rc-slider-rail"></div>
          <div class="rc-slider-track rc-slider-track-1" style="visibility: visible; left: 0%; width: 100%;"></div>
          <div class="rc-slider-step"><span class="rc-slider-dot rc-slider-dot-active" style="left: 0%;"></span><span class="rc-slider-dot rc-slider-dot-active" style="left: 100%;"></span></div>
          <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"
            aria-disabled="false" class="rc-slider-handle rc-slider-handle-1" style="left: 0%;"></div>
          <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100" aria-disabled="false" class="rc-slider-handle rc-slider-handle-2" style="left: 100%;"></div>
          <div class="rc-slider-mark"><span class="rc-slider-mark-text rc-slider-mark-text-active" style="width: 90%; margin-left: -45%; left: 0%;">0 score</span><span class="rc-slider-mark-text rc-slider-mark-text-active" style="width: 90%; margin-left: -45%; left: 100%;">100 score</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Range Filter tests renders correctly 1`] = `
<div class="sk-panel filter--m">
  <div class="sk-panel__header">metascore</div>
  <div class="sk-panel__content">
    <div>
      <div class="sk-range-histogram">
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 60%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 100%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
      </div>
      <div class="sk-range-slider">
        <div class="rc-slider rc-slider-with-marks">
          <div class="rc-slider-rail"></div>
          <div class="rc-slider-track rc-slider-track-1" style="visibility: visible; left: 0%; width: 100%;"></div>
          <div class="rc-slider-step"><span class="rc-slider-dot rc-slider-dot-active" style="left: 0%;"></span><span class="rc-slider-dot rc-slider-dot-active" style="left: 100%;"></span></div>
          <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"
            aria-disabled="false" class="rc-slider-handle rc-slider-handle-1" style="left: 0%;"></div>
          <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100" aria-disabled="false" class="rc-slider-handle rc-slider-handle-2" style="left: 100%;"></div>
          <div class="rc-slider-mark"><span class="rc-slider-mark-text rc-slider-mark-text-active" style="width: 90%; margin-left: -45%; left: 0%;">0 score</span><span class="rc-slider-mark-text rc-slider-mark-text-active" style="width: 90%; margin-left: -45%; left: 100%;">100 score</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Range Filter tests renders limited range correctly 1`] = `
<div class="sk-panel filter--m">
  <div class="sk-panel__header">metascore</div>
  <div class="sk-panel__content">
    <div>
      <div class="sk-range-histogram">
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 60%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar" style="height: 100%;"></div>
        <div class="sk-range-histogram__bar" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 20%;"></div>
        <div class="sk-range-histogram__bar is-out-of-bounds" style="height: 20%;"></div>
      </div>
      <div class="sk-range-slider">
        <div class="rc-slider rc-slider-with-marks">
          <div class="rc-slider-rail"></div>
          <div class="rc-slider-track rc-slider-track-1" style="visibility: visible; left: 30%; width: 40%;"></div>
          <div class="rc-slider-step"><span class="rc-slider-dot" style="left: 0%;"></span><span class="rc-slider-dot" style="left: 100%;"></span></div>
          <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="30" aria-disabled="false" class="rc-slider-handle rc-slider-handle-1"
            style="left: 30%;"></div>
          <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="70" aria-disabled="false" class="rc-slider-handle rc-slider-handle-2" style="left: 70%;"></div>
          <div class="rc-slider-mark"><span class="rc-slider-mark-text" style="width: 90%; margin-left: -45%; left: 0%;">0 score</span><span class="rc-slider-mark-text" style="width: 90%; margin-left: -45%; left: 100%;">100 score</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Range Filter tests renders with range input component 1`] = `
<div class="sk-panel filter--m">
  <div class="sk-panel__header">metascore</div>
  <div class="sk-panel__content">
    <form class="sk-range-input"><input type="number" class="sk-range-input__input" value="0" placeholder="min">
      <div class="sk-range-input__to-label">-</div><input type="number" class="sk-range-input__input" value="100" placeholder="max"><button type="submit" class="sk-range-input__submit">Go</button></form>
  </div>
</div>
`;

exports[`Range Filter tests renders without histogram 1`] = `
<div class="sk-panel filter--m">
  <div class="sk-panel__header">metascore</div>
  <div class="sk-panel__content">
    <div class="sk-range-slider">
      <div class="rc-slider rc-slider-with-marks">
        <div class="rc-slider-rail"></div>
        <div class="rc-slider-track rc-slider-track-1" style="visibility: visible; left: 0%; width: 100%;"></div>
        <div class="rc-slider-step"><span class="rc-slider-dot rc-slider-dot-active" style="left: 0%;"></span><span class="rc-slider-dot rc-slider-dot-active" style="left: 100%;"></span></div>
        <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"
          aria-disabled="false" class="rc-slider-handle rc-slider-handle-1" style="left: 0%;"></div>
        <div role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100" aria-disabled="false" class="rc-slider-handle rc-slider-handle-2" style="left: 100%;"></div>
        <div class="rc-slider-mark"><span class="rc-slider-mark-text rc-slider-mark-text-active" style="width: 90%; margin-left: -45%; left: 0%;">0 score</span><span class="rc-slider-mark-text rc-slider-mark-text-active" style="width: 90%; margin-left: -45%; left: 100%;">100 score</span></div>
      </div>
    </div>
  </div>
</div>
`;
